app/assets/stylesheets/calendar.css
[data-calendar-target="weekHeader"] {
  padding-top: 1rem;
  padding-bottom: 1rem;
  text-align: center;
  font-size: 1.2em;
  margin-bottom: 10px;
  border-bottom: 1px solid lightgray;
}

[data-calendar-target="list"] {
  height: 80vh;
  overflow-y: scroll;
  /* scroll-snap-type: y mandatory; */
  display: flex;
  padding: 0;
  flex-direction: column;
}

[data-calendar-target="list"] [data-calendar-target="week"] {
  /* scroll-snap-align: start; */
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--pico-primary-background);
}

.weekdays {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
}

.weekday {
  flex: 1;
  display: flex;
  flex-direction: row;
  border-bottom: 1px solid dimgray;
}

.weekday-link {
  display: flex;
  text-decoration: none;
  color: inherit;
  width: 100%;
  height: 100%;
  padding: 1rem;
}

.weekday:last-child {
  border-bottom: none;
}

.date {
  width: 80px;
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
}

.weekday-bookings {
  flex: 1;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  gap: 1.8rem;
}

.booking-placeholder {
  min-width: 2.1rem;
}

